# vietnam_coffee_synthetic

./: .gitignore  AGENTS.md  DESIGN_BRIEF_FINAL.md  IMPLEMENTATION_PLAN.md  PROMPT.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_research.md  loop.sh  main.py  pyproject.toml
configs/: vietnam_coffee_indices.yaml
data/: vietnam_coffee_yield_synthetic.csv
outputs/: vietnam_coffee_yield_data.csv
research/: llm_deep_research.md  vietnam_coffee_yield_research.md
scripts/: 01_inspect_and_standardise.py  02_areal_aggregation.py  03_climatology.py  04_indices_and_anomalies.py  05_visualise.py  06_flood_frequency.py  create_coffee_map.py  create_coffee_maps.py
