[project]
name = "vietnam-coffee-synthetic"
version = "0.1.0"
description = "Generate synthetic Vietnam coffee yield data for conference booth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "xarray>=2024.0.0",
    "zarr>=2.18.0,<3.0.0",
    "geopandas>=1.0.0",
    "dask[distributed]>=2024.0.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "cartopy>=0.23.0",
    "pyarrow>=14.0.0",
    "rasterio>=1.5.0",
]

[project.optional-dependencies]
weather = [
    # tf-data-ml-utils weather pipeline - provides CLI tools and Python modules for:
    # - Areal aggregation (weather-areal)
    # - Climatology computation (weather-climatology)
    # - Weather indices (weather-indices, GDD, EDD, SPI, etc.)
    # Install from local path during development:
    "tf-data-ml-utils[weather] @ file:///Users/tommylees/github/tf-data-ml-utils",
]
